# psx-sdk-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  config.mk  lld.patch  llvm_mips1.patch  mipsel-sony-psx.ld  psx.ld  rustc_mips1.patch  rustc_psx.patch  rustfmt.toml  target.json  test.rs  test.sh
cargo-psx/: Cargo.toml  README.md  mipsel-sony-psx.json  rustfmt.toml
cargo-psx/elf2psexe/: Cargo.toml
cargo-psx/elf2psexe/src/: elf.rs  lib.rs  psexe.rs
cargo-psx/src/: main.rs  package.rs
cargo-psx/src/iso9660/: mod.rs  str_a.rs  str_d.rs  uint.rs
psx/: Cargo.toml  ELF.ld  bios.txt  build.rs  psexe.ld  rustfmt.toml
psx/.cargo/: config.toml
psx/src/: .value.rs.swp  allocator.rs  bios.rs  builtins.rs  compatibility.rs  constants.rs  cop0.rs  dma.rs  framebuffer.rs  general.rs  global.rs  gpu.rs  gte.rs  heap.rs  include.rs  interrupt.rs  io.rs  irq.rs  lazy_global.rs  lib.rs  macros.rs  math.rs  mmio.rs  old.rs  panic.rs  printer.rs  registers.rs  runtime.rs  std.rs  test.rs  tests.rs  tim.rs  timer.rs  trig.rs  tty.rs  unchecked.rs  unzip.rs  value.rs  workarounds.rs
psx/src/approx/: mod.rs  trig.rs
psx/src/bios/: event.rs  fs.rs  gamepads.rs  kernel.rs  mod.rs  pad.rs  tests.rs  thread.rs  trampoline.s  tty.rs
psx/src/dma/: channel.rs  control.rs  gpu.rs  interrupt.rs  mod.rs  otc.rs  transfer.rs
psx/src/format/: mod.rs  mtl.rs  obj.rs  tim.rs
psx/src/framebuffer/: mod.rs  wrapper.rs
psx/src/gpu/: color.rs  colors.rs  disp_env.rs  disp_port.rs  draw_env.rs  draw_port.rs  framebuffer.rs  gp0.rs  gp1.rs  gpu_stat.rs  mod.rs  packed_vector.rs  packet.rs  primitive.rs  primitives.rs  stat.rs  texture.rs  vertex.rs  vram.rs
psx/src/gpu/graphics/: buffer.rs  macros.rs  mod.rs  ot.rs  packet.rs  primitive.rs
psx/src/gpu/prim/: buffer.rs  double_buffer.rs  linef.rs  lineg.rs  macros.rs  mod.rs  ot.rs  polyf.rs  polyft.rs  polyg.rs  polygt.rs  primitive.rs  sprt.rs  tile.rs
psx/src/gpu/primitive/: mod.rs  polyf.rs  polyft.rs  polygt.rs  sprt.rs  tile.rs
psx/src/gpu/primitives/: linef.rs  (+7 more)
psx/src/graphics/: buffer.rs  cosine_table.rs  draw_env.rs  fixed_point.rs  macros.rs  mod.rs  ot.rs  packet.rs  trig.rs  vector.rs
psx/src/gte/: f16.rs  mod.rs  trig.rs
psx/src/hal/: asm.rs  cop0.rs  cpu.rs  global_pointer.rs  gte.rs  macros.rs  mmio.rs  mod.rs
psx/src/heap/: linked_list.rs  mod.rs
psx/src/hw/: cop.rs  dma.rs  gte.rs  irq.rs  mmio.rs  mod.rs  pad.rs
psx/src/interrupt/: irq.rs  mask.rs  mod.rs  stat.rs
psx/src/irq/: mask.rs  mod.rs  stat.rs
psx/src/mmio/: macros.rs  mod.rs  register.rs
psx/src/printer/: fmt.rs  mod.rs  wrapper.rs
psx/src/sys/: fs.rs  gamepad.rs  heap.rs  kernel.rs  mod.rs  rng.rs  trampoline.s  tty.rs
psx/src/test/: mod.rs
psx/src/tim/: bitmap.rs  mod.rs
psx/src/timer/: counter.rs  mod.rs  modes.rs  sources.rs  timer0.rs  timer1.rs
psx/src/timers/: mod.rs  timer0.rs  timer1.rs  timer2.rs
(+273 files in other folders)
