[package]
name = "cargo-psx"
version = "0.1.2"
description = "`cargo` wrapper for the Sony PS1"
repository = "https://github.com/ayrtonm/psx-sdk-rs"
license = "MIT"
authors = ["Ayrton Muñoz <a.munoz3327@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.14.1"
clap = { version = "3.1.9", features = ["derive"] }
