[package]
name = "psx"
version = "0.1.5"
description = "Library for developing homebrew for the Sony PS1"
readme = "../README.md"
repository = "https://github.com/ayrtonm/psx-sdk-rs"
license = "MIT"
authors = ["Ayrton Muñoz <a.munoz3327@gmail.com>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["mipsel-unknown-linux-gnu"]
rustc-args = ["--cfg", "heap"]
cargo-args = ["--features", "psx/heap"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.linked_list_allocator]
version = "0.9.1"
optional = true
default-features = false
features = ["const_mut_refs"]

[dev-dependencies]
num = { version = "0.4.0", default-features = false }
const-random = "0.1.13"
aligned = "0.4.0"

[features]
NA_region = []
EU_region = []
J_region = []
min_panic = []
loadable_exe = []
custom_oom = []
heap = ["dep:linked_list_allocator"]
nightlier = []
